benchmark-results/main/cseq/concurrentwitness2test.2023-12-03_12-02-39.logfiles/SV-COMP23_unreach-call.cseq-28-race_reach_83-list2_racing1.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/goblint-regression/28-race_reach_83-list2_racing1.yml/28-race_reach_83-list2_racing1.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/goblint-regression/28-race_reach_83-list2_racing1.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 83, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_4fgw71jp/tmp/tmpwt7ihtaz.c
Compilation started
/tmp/BenchExec_run_4fgw71jp/tmp/tmpwt7ihtaz.c:715:8: error: redefinition of ‘struct s’
  715 | struct s
      |        ^
/tmp/BenchExec_run_4fgw71jp/tmp/tmpwt7ihtaz.c:710:8: note: originally defined here
  710 | struct s
      |        ^

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
